fixed spacing issues

--- a/index.css
+++ b/index.css
@@ -839,11 +839,10 @@ img {
     text-align: center;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     padding-bottom: 0;
     display: flex;
     position: relative;
-    margin-right: 15%;
     border-bottom:#F58F7C
 
 }
@@ -1046,7 +1045,7 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
-    margin-left: -3%;
+  margin-right: -3%;
 }
 
 .left-summary {
@@ -1117,26 +1116,19 @@ section {
   
 
   .main-nav {
-    position: relative;
-    top: 50%;
-    left: 24%;
-    transform: translate(-50%, -50%);
-    margin: 0;
+    list-style: none;
     padding: 0;
-    width: 900px;
-    height: 250px;
-    margin-left: -5%;
+    margin: 0;
+    display: flex;
   }
   
   .main-nav li {
-    list-style: none;
-    position: absolute;
     width: 250px;
     height: 250px;
-    /*background: #000;*/
+    margin: 0;
+    position: relative;
     transform: rotate(45deg);
     transition: 0.5s;
-    margin: -100px;
     overflow: hidden;
     opacity: 0.5;
   }
@@ -1154,22 +1146,22 @@ section {
   
   .main-nav li.item2 {
     bottom: 0;
-    left: 25%;
+    
   }
   
   .main-nav li.item3 {
     top: 0;
-    left: 50%;
+    
   }
   
   .main-nav li.item4 {
     bottom: 0;
-    left: 75%;
+    
   }
   
   .main-nav li.item5 {
     top: 0;
-    left: 100%;
+    
   }
   
   .main-nav li .image-wrapper {
@@ -1227,7 +1219,7 @@ section {
     justify-content: center;
     align-items: center;
     height: 60vh; /* Set the height as needed */
-    
+    flex-direction: column;
 }
 
 .personal-summary-container {
@@ -1259,12 +1251,13 @@ section {
 .left-text-box-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     height: 100vh;
     z-index: 1;
     margin-bottom:20%;
     width:50%;
+    padding-left:10%;
 }
 
 .left-text-box-title {
@@ -1277,7 +1270,7 @@ section {
 
 .left-text-box-summary {
     font-family: migra, sans-serif;
-    font-size: 1em;
+    font-size: 1.25em;
     color:#D6D6D6;
     overflow: hidden; /* Hide content that overflows the box */
     white-space: normal;
@@ -1325,7 +1318,7 @@ section {
     width: 50%;
     display: flex;
     flex-direction: column;
-    margin-left: 55%;
+    margin-left: 50%;
 }
 
 .right-text-box-title {
